feat(frontend): improve UI/UX with global styles, responsive layout and dark mode